--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,18 +2,39 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
+        <meta name="viewport"
+              content="width=device-width, user-scalable=yes, initial-scale=1.0 ">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title> {% block title  %}Sortir.com ! {% endblock %}</title>
+{#        <link rel="preconnect" href="https://fonts.googleapis.com">#}
+{#        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>#}
+        <link rel="stylesheet" href="{{ asset('css/normalize.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/app.css') }}">
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
+{#        <link rel="icon" href="{{ asset('img/icon.png') }}">#}
+
     </head>
     <body>
-        {% block body %}{% endblock %}
+    <div class="container">
+        <header>
+            <h1><a href="{{ path('main_home') }}"><img src="{{ asset('img/logo.svg') }}" alt="Sortir.com!"></a></h1>
+            {% include('inc/nav.html.twig') %}
+        </header>
+
+{#        #}{# read and display all flash messages #}
+{#        {% for label, messages in app.flashes %}#}
+{#            {% for message in messages %}#}
+{#                <div class="flash flash-{{ label }}">#}
+{#                    {{ message }}#}
+{#                </div>#}
+{#            {% endfor %}#}
+{#        {% endfor %}#}
+        <main>
+            {% block body %}{% endblock %}
+        </main>
+        <footer>
+            <div>&copy; {{ "now" | date("Y") }} Sortir.com !</div>
+        </footer>
+    </div>
     </body>
 </html>
