--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -3,19 +3,20 @@
 
         {% if app.user %}
             <li><a href="{{ path('main_home') }}" title="Accueil">Accueil</a></li>
-            <li><a href="{{ path('profil') }}" title="profil">Mon Profil</a></li>
+{#            <li><a href="{{ path('profil') }}" title="profil">Mon Profil</a></li>#}
             <li><a href="{{ path('app_logout') }}" title="logout">Logout ({{ app.user.firstName }})</a></li>
 
 
             {% if is_granted("ROLE_ADMIN") %}
-                <li><a href="{{ path('main_city') }}" title="Villes">Villes</a></li>
-                <li><a href="{{ path('campus') }}" title="campus">Campus</a></li>
+             {# <li><a href="{{ path('main_city') }}" title="Villes">Villes</a></li>
+              <li><a href="{{ path('campus') }}" title="campus">Campus</a></li>#}
+                <li><a href="{{ path('admin_dashboard') }}" title="Admin dashboard">Admin</a></li>
             {% endif %}
 
         {% else %}
 
-            <li><a href="{{ path('app_login') }}" title="login">Login</a></li>
-            <li><a href="{{ path('app_register') }}" title="register">Register</a></li>
+            <li><a href="{{ path('app_login') }}" title="login">Se connecter</a></li>
+            <li><a href="{{ path('app_register') }}" title="register">S'enregistrer</a></li>
 
         {% endif %}
 
