--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,21 +1,18 @@
 {#TODO: modifier fichier Twig pour gestion utlisateur via Administrateur #}
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AdminController!{% endblock %}
+{% block title %}Tableau de bord!{% endblock %}
 
 {% block body %}
-    <style>
-        .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-        .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-    </style>
+    {% for flashError in app.flashes('verify_email_error') %}
+        <div class="alert alert-danger" role="alert">{{ flashError }}</div>
+    {% endfor %}
 
-    <div class="example-wrapper">
-        <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Création d'un compte</h1>
 
-        This friendly message is coming from:
-        <ul>
-            <li>Your controller at <code><a href="{{ '/Users/charlotterouilly/Sites/localhost/series/src/Controller/AdminController.php'|file_link(0) }}">src/Controller/AdminController.php</a></code></li>
-            <li>Your template at <code><a href="{{ '/Users/charlotterouilly/Sites/localhost/series/templates/admin/index.html.twig'|file_link(0) }}">templates/admin/index.html.twig</a></code></li>
-        </ul>
-    </div>
+    {{ form_start(registrationForm) }}
+    {{ form_widget(registrationForm) }}
+
+    <button type="submit" class="btn">Créer compte</button>
+    {{ form_end(registrationForm) }}
 {% endblock %}
