--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,15 +11,23 @@
         <link rel="stylesheet" href="{{ asset('css/normalize.css') }}">
         <link rel="stylesheet" href="{{ asset('css/app.css') }}">
 
-{#        <link rel="icon" href="{{ asset('img/icon.png') }}">#}
+      <link rel="icon" href="{{ asset('img/logo_bulle.png') }}">
 
     </head>
     <body>
     <div class="container">
         <header>
-            <h1><a href="{{ path('main_home') }}"><img src="{{ asset('img/logo.svg') }}" alt="Sortir.com!"></a></h1>
-            {% include('inc/nav.html.twig') %}
+            <h1 class="logo"><a href="{{ path('main_home') }}"><img src="{{ asset('img/logo_bulle.png') }}" alt="Sortir.com!"></a></h1>
+            <h1 class="blockSortir">Sortir.com</h1>
+            <br>
+            <nav>{% include('inc/nav.html.twig') %}</nav>
         </header>
+
+        <style>
+            body {
+                background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.7)), url("{{ asset('img/fond_ecran_bis.jpg') }}");
+            }
+        </style>
 
 {#        #}{# read and display all flash messages #}
 {#        {% for label, messages in app.flashes %}#}
@@ -33,7 +41,7 @@
             {% block body %}{% endblock %}
         </main>
         <footer>
-            <div>&copy; {{ "now" | date("Y") }} Sortir.com !</div>
+            <div class="footer">&copy; {{ "now" | date("Y") }} Sortir.com !</div>
         </footer>
     </div>
     </body>
