--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,8 +7,31 @@ body {
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
-    color: #EEE;
+    color: #222;
     font-family: 'Crimson Text', serif;
+}
+
+.logo {
+    float: left;
+    margin-top: 5px;
+    margin-bottom:5px;
+}
+.blockSortir {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
+    margin-bottom:5px;
+    text-align: center;
+    font-size:75px;
+    height:150px;
+    /*background-color:rgb(0, 173, 239);*/
+    color: rgb(0, 173, 239);
+}
+
+.footer{
+    padding: 10px;
+    text-align: center;
+    background-color:rgb(0, 173, 239);
 }
 
 .container {
@@ -31,6 +54,7 @@ img {
 }
 
 h1, h2, h3, h4 {
+    text-align: center;
     margin-top: 0;
 }
 
@@ -41,7 +65,7 @@ body > .container {
 }
 
 header img {
-    height: 70px;
+    height: 150px;
 }
 
 main {
@@ -58,16 +82,21 @@ nav li {
     margin-right: 1rem;
 }
 
-.series-list {
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+.col-left {
+    float: left;
+    position: relative;
 }
 
-.serie-details {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 30px;
+.col-right {
+    float: right;
+    position: relative;
+}
+
+.bottom {
+    position: fixed;
+    margin-left: auto;
+    margin-right: auto;
+    bottom: 75px;
 }
 
 .serie-details-infos > div {
