--- a/templates/user/profileUser.html.twig
+++ b/templates/user/profileUser.html.twig
@@ -23,6 +23,11 @@
         {% endif %}
     </div>
     <div class="">
+        {% if app.user.id == user.id %}
+            <a href="{{ path('user_password') }}">Modifier le mot de passe</a>
+        {% endif %}
+    </div>
+    <div class="">
         <a href="{{ path('main_home') }}">Retour</a>
     </div>
 
