--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,14 +29,14 @@
             }
         </style>
 
-{#        #}{# read and display all flash messages #}
-{#        {% for label, messages in app.flashes %}#}
-{#            {% for message in messages %}#}
-{#                <div class="flash flash-{{ label }}">#}
-{#                    {{ message }}#}
-{#                </div>#}
-{#            {% endfor %}#}
-{#        {% endfor %}#}
+
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="flash flash-{{ label }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
         <main>
             {% block body %}{% endblock %}
         </main>
