--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -10,7 +10,7 @@
 
     <div>
         <div>
-        <h3>Filtrer les sorties</h3>
+            <h3>Filtrer les sorties</h3>
             {{ form_row(searchTripForm.campus) }}
             {{ form_row(searchTripForm.name) }}
             <div>
@@ -27,36 +27,48 @@
         <button type="submit" class="btn">Rechercher</button>
     </div>
 
+    <div>
+    </div>
+
     <table>
         <thead>
-            <tr>
-                <th>Nom de la sortie</th>
-                <th>Date de la sortie</th>
-                <th>Clôture</th>
-                <th>Inscrits/places</th>
-                <th>Etat</th>
-                <th>Organisateur</th>
-                <th>Actions</th>
-            </tr>
+        <tr>
+            <th>Nom de la sortie</th>
+            <th>Date de la sortie</th>
+            <th>Clôture</th>
+            <th>Inscrits/places</th>
+            <th>Etat</th>
+            <th>Organisateur</th>
+            <th>Actions</th>
+        </tr>
         </thead>
         <tbody>
-            {% for trip in tripList %}
-                <tr>
-                    <td>{{ trip.name }}</td>
-                    <td>{{ trip.startHour|date("d/m/Y h:i") }}</td>
-                    <td>{{ trip.limitDate|date("d/m/Y") }}</td>
-                    <td>{{ trip.limitedPlace }}</td>
-                    <td>{{ trip.state.wording }}</td>
-                    <td><a href="#" >{{ trip.organizer.username }}</a></td>
-                    <td><a href="{{ path('trip_display', {'id':trip.id}) }}">Afficher</a></td>
-
-                    <td>
-
-                    </td>
-                </tr>
-            {% endfor %}
+        {% for trip in tripList %}
+            <tr id="{{ trip.id }}">
+                <td>{{ trip.name }}</td>
+                <td>{{ trip.startHour|date("d/m/Y h:i") }}</td>
+                <td>{{ trip.limitDate|date("d/m/Y h:i") }}</td>
+                <td>{{ trip.participant|length }} / {{ trip.limitedPlace }}</td>
+                <td>{{ trip.state.wording }}</td>
+                <td>{{ trip.organizer.username }}</td>
+                <td><a href="#">Afficher</a>
+                    {% if trip.organizer.username == app.user.username %}
+                        <a href="#">Modifier</a>
+                        {#                            {{ dump(trip.startHour.add(new DateInterval('PT' ~ trip.duration.timestamp ~ 'S'))) }}#}
+                        {#                            {%  if 'now'|date("d/m/Y i:m") < (trip.startHour.add(trip.duration)) %}#}
+                        {#                                <a href="#">Annuler</a>#}
+                        {#                                <a href="#">Publier</a>#}
+                        {#                            {% endif %}#}
+                    {% endif %}
+                    {% for participant in trip.participant %}
+                        {% if app.user.username == participant.username %}
+                            <a href="#">Se désister</a>
+                        {% endif %}
+                    {% endfor %}
+                </td>
+            </tr>
+        {% endfor %}
         </tbody>
     </table>
-    <br>
     <a href="{{ path('trip_create') }}" title="Créer une sortie">Créer une sortie</a>
 {% endblock %}
