--- a/templates/trip/display.html.twig
+++ b/templates/trip/display.html.twig
@@ -10,7 +10,7 @@
             <br>
             Date et heure de la sortie: {{trip.startHour|date("d/m/Y h:i")}}
             <br>
-            Date limite d'inscription: {{trip.limitDate|date("d/m/Y") }}</td>
+            Date limite d'inscription: {{ trip.limitDate|date("d/m/Y") }}
             <br>
             Nombre de places: {{trip.limitedPlace }}
             <br>
