--- a/templates/trip/display.html.twig
+++ b/templates/trip/display.html.twig
@@ -5,50 +5,69 @@
 {% block body %}
     <h1>Afficher une sortie</h1>
     {% for trip in tripDisplay%}
-        <div>
+        <div class="col-left">
+            <div class="espacement" class="col-left">
             Nom de la sortie: {{trip.name }}
-            <br>
+        </div>
+        <div class="espacement" class="col-left">
             Date et heure de la sortie: {{trip.startHour|date("d/m/Y h:i")}}
-            <br>
+        </div>
+        <div class="espacement" class="col-left">
             Date limite d'inscription: {{trip.limitDate|date("d/m/Y") }}</td>
-            <br>
+        </div>
+        <div class="espacement" class="col-left">
             Nombre de places: {{trip.limitedPlace }}
-            <br>
+        </div>
+        <div class="espacement" class="col-left">
             Durée: {{trip.duration |date("h:i") }}
-            <br>
+        </div>
+        <div class="espacement" class="col-left">
             Description et infos: {{trip.infoTrip}}
         </div>
-        <div>
+        </div>
+        <div class="col-right">
+        <div class="espacement" >
             Campus: {{trip.campus.name}}
-            <br>
+        </div>
+        <div class="espacement">
+        </div>
+        <div class="espacement">
             Lieu: {{trip.place.name}}
-            <br>
+        </div>
+        <div class="espacement">
+        </div>
+        <div class="espacement">
             Rue: {{trip.place.street}}
-            <br>
+        </div>
+        <div class="espacement">
             Code Postal: {{trip.place.city.zipCode }}
-            <br>
+        </div>
+        <div class="espacement">
             Latitude: {{trip.place.latitude}}
-            <br>
+        </div>
+        <div class="espacement">
             Longitude:{{trip.place.longitude}}
+        </div>
         </div>
     {% endfor %}
     <br>
-        <table>
-            <thead>
+        <table class="tableau-participants" >
+            <thead class="tableau-entete">
             <tr>
                 <th>Pseudo</th>
                 <th>Nom</th>
             </tr>
             </thead>
-            <tbody>
+            <tbody class="table tr:nth-child(2n+1)" class="table tr:nth-child(2n+2)">
             {% for participant in listParticipants %}
                 <tr>
                     <td>{{ participant.username }}</td>
-                    <td><a href="#" > {{ participant.firstName}} {{ participant.lastName}} (lien a créer avec Dorian)</a></td>
-{#                    <td><a href="{{ path('trip_display', {'id':trip.id}) }}">Afficher</a></td>#}
+                    <td><a href="{{ path('user_profile', {'id': app.user.id}) }}" title="Voir le profil" class='liens'> {{ participant.firstName}} {{ participant.lastName}} </a></td>
+
                 </tr>
             {% endfor %}
             </tbody>
         </table>
     <br>
+
 {% endblock %}
