--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,204 @@
+/*General*/
 html {
     font-size: 18px;
+    font-family: Avenir, sans-serif;
+}
+/*General container*/
+body >.container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.scroll {
+    overflow : auto;
+}
+
+/*General: liens*/
+.liens {
+    display: block;
+    text-decoration: none;
+    color: black;
+    border-bottom: 2px solid transparent;
+    padding: 10px 0px;
+}
+
+.liens:hover {
+    background-color: rgb(0, 173, 239);
+    border-bottom: 2px solid rgb(5, 5, 134);
+}
+
+/*Entête du Site*/
+.blockSortir {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
+    margin-bottom:5px;
+    text-align: center;
+    height:150px;
+    line-height: 150px;
+    font-size:75px;
+    font-family: 'Zen','Tokyo','Zoo';
+
+    background-color:rgb(0, 173, 239);
+    color: black;
+}
+/*logo Sortir.com*/
+header img {
+    height: 150px;
+}
+
+/*Menu de navigation*/
+nav ul {
+    display: flex;
+    list-style: none;
+    padding-left: 0;
+    background-color: rgb(237, 131, 29);
+}
+
+/*Menu de navigation: puces*/
+nav li {
+    float: left;
+    width: 25%;
+    text-align:center;
+    font-weight:bold;
+}
+/*Menu de navigation*/
+nav ul::after{
+    content: "";
+    display: table;
+    clear:both;
+}
+/*Menu de navigation*/
+nav{
+    width: 100%;
+    margin: 0 auto;
+    background-color: color: rgb(237, 131, 29);
+    position: sticky;
+    top: 0px;
+}
+/*Menu de navigation: liens*/
+nav a {
+    display: block;
+    text-decoration: none;
+    color: black;
+    border-bottom: 2px solid transparent;
+    padding: 10px 0px;
+
+}
+/*liens*/
+nav a:hover {
+    background-color: rgb(0, 173, 239);
+    border-bottom: 2px solid rgb(5, 5, 134);
+}
+
+/* Accueil*/
+.info-accueil {
+    float: right;
+    position: relative;
+    font-weight:bold;
+}
+/*Filtre recherche*/
+.filtre-recherche {
+    display: flex;
+    float: left;
+    position: relative;
+    border: dashed 1px black;
+    margin-right: 2rem;
+    margin-left: 2rem;
+}
+/*Filtre date*/
+.date{
+    float: left;
+    margin-right: 1rem;
+    position: relative
+}
+
+/* a supprimer ??*/
+.champs-recherche{
+    display: flex;
+    position: relative;
+    float: left;
+    margin-right: 2rem;
+    height:30px;
+    line-height: 30px;
+}
+/*Filtre checkbox*/
+.checkbox{
+    display: block;
+    position: relative;
+    float: right;
+    margin-right: 2rem;
+    height:30px;
+    line-height: 30px;
+}
+
+/*Tableau */
+.tableau-recherche {
+    float: bottom;
+    position: relative;
+    //margin-top: 2rem;
+    overflow: -moz-scrollbars-vertical;
+}
+/*Tableau participants*/
+.tableau-participants {
+    position: absolute;
+    float:bottom;
+    margin-top: 250px;
+    overflow: -moz-scrollbars-vertical;
+}
+
+.tableau-entete {
+    background-color: rgb(0, 173, 239);
+    color: black;
+}
+
+/*Tableau body*/
+.table tr:nth-child(2n+1) {
+background-color: rgb(170,232, 255);
+}
+.table tr:nth-child(2n+2) {
+    background-color: rgb(221,245, 255);
+}
+
+
+
+/*bouton du site*/
+button {
+    background-color: gold;
+    border: 1px solid;
+    border: black;
+    ;
+}
+/*affichage bouton du site*/
+button:hover {
+    background-color: rgb(135,189, 43);
+}
+
+/*lien bouton*/
+.a-button {
+    -webkit-appearance: button;
+    //-webkit-writing-mode: horizontal-tb !important;
+    //-moz-appearance: button;
+    text-decoration: none;
+    color: black;
+    background-color: gold;
+    line-height: 1.15;
+    font-weight: 400;
+    font-size: 100%;
+    display: inline-block;
+    text-align: center;
+    box-sizing: border-box;
+    font-family: Arial;
+    padding: 1px 6px;
+    border-width: 2px;
+    border-style: outset;
+    margin-bottom: 10px;
+}
+/*affichage lien bouton du site*/
+.a-button:hover {
+    background-color: rgb(135,189, 43);
 }
 
 body {
@@ -16,18 +215,8 @@ body {
     margin-top: 5px;
     margin-bottom:5px;
 }
-.blockSortir {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5px;
-    margin-bottom:5px;
-    text-align: center;
-    font-size:75px;
-    height:150px;
-    /*background-color:rgb(0, 173, 239);*/
-    color: rgb(0, 173, 239);
-}
 
+/*pied de page*/
 .footer{
     padding: 10px;
     text-align: center;
@@ -38,15 +227,6 @@ body {
     max-width: 1000px;
     margin: auto;
     padding: 5px;
-}
-
-a {
-    color: inherit;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #BC956B;
 }
 
 img {
@@ -64,43 +244,24 @@ body > .container {
     min-height: 100vh;
 }
 
-header img {
-    height: 150px;
-}
 
 main {
     flex: 1;
 }
 
-nav ul {
-    display: flex;
-    list-style: none;
-    padding-left: 0;
-}
-
-nav li {
-    margin-right: 1rem;
-}
 
 .col-left {
     float: left;
-    position: relative;
+    width: 50%;
 }
 
 .col-right {
     float: right;
-    position: relative;
+
 }
 
-.bottom {
-    position: fixed;
-    margin-left: auto;
-    margin-right: auto;
-    bottom: 75px;
-}
-
-.serie-details-infos > div {
-    margin-bottom: 1rem;
+.espacement {
+    padding-bottom: 10px
 }
 
 /* forms */
@@ -121,23 +282,6 @@ form > div > div {
     margin-bottom: 1rem;
 }
 
-#serie_genres label {
-    margin: 0 0.5rem 0 0.1rem;
-}
-
-.seasons article {
-    display: flex;
-    margin-bottom: 1rem;
-}
-
-.seasons article img {
-    max-height: 200px;
-    margin-right: 0.6rem;
-}
 
 
-@media screen and (min-width: 700px) {
-    .serie-details {
-        grid-template-columns: 300px 1fr;
-    }
-}
+
