--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,8 +6,10 @@
               content="width=device-width, user-scalable=yes, initial-scale=1.0 ">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title> {% block title  %}Sortir.com ! {% endblock %}</title>
-{#        <link rel="preconnect" href="https://fonts.googleapis.com">#}
-{#        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>#}
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Zen+Tokyo+Zoo&display=swap" rel="stylesheet">
+
         <link rel="stylesheet" href="{{ asset('css/normalize.css') }}">
         <link rel="stylesheet" href="{{ asset('css/app.css') }}">
 
