--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -31,11 +31,9 @@
         </div>
 
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Se connecter
-    </button>
+    <button class="a-button" type="submit">Se connecter</button>
 </form>
     <div>
-        <a href="{{ path('app_forgot_password_request') }}" title="reset password">Mot de passe oublié ?</a>
+        <a href="{{ path('app_forgot_password_request') }}" title="mot de passe oublié" class="a-button">Mot de passe oublié ?</a>
     </div>
 {% endblock %}
