--- a/templates/trip/cancel.html.twig
+++ b/templates/trip/cancel.html.twig
@@ -3,25 +3,26 @@
 {% block title %}Annuler une sortie{% endblock %}
 
 {% block body %}
+
     <h1>Annuler une sortie</h1>
     {% for trip in tripDisplay %}
-        {{ form_start(tripCancelForm) }}#}
-<div>
-{#
-{#    Nom de la sortie: {{trip.name }}#}
-{#    <br>#}
-{#    Date de la sortie: {{trip.startHour|date("d/m/Y")}}#}
-{#    <br>#}
-{#    Campus: {{trip.campus.name}}#}
-{#    <br>#}
-{#    Lieu: {{trip.place.name}} {{trip.place.street}} {{trip.place.city.zipCode }} {{trip.place.city.name}}#}
-{#    <br>#}
-{#    {{ form_row(tripDeleteForm.cancelReason) }}#}
+        {{ form_start(tripCancelForm) }}
+<div class="container">
+
+    Nom de la sortie: {{trip.name }}
+    <br>
+    Date de la sortie: {{trip.startHour|date("d/m/Y")}}
+    <br>
+    Campus: {{trip.campus.name}}
+    <br>
+    Lieu: {{trip.place.name}} {{trip.place.street}} {{trip.place.city.zipCode }} {{trip.place.city.name}}
+    <br>
+    {{ form_row(tripCancelForm.cancelReason) }}
     {{ form_widget(tripCancelForm) }}
 </div>
 {% endfor %}
 <br>
-    <button type="submit" class="btn">Enregistrer</button>
-    <a href="{{ path('main_home') }}" title="Annuler">Annuler</a>
+    <button type="submit" class="a-button" title="Annuler la sortie">Enregistrer</button>
+    <a href="{{ path('main_home') }}" title="Retourner à la page d'accueil" class="a-button">Annuler</a>
     {{ form_end(tripCancelForm) }}
 {% endblock %}
